<resources>
    <string name="app_name" translatable="false">Arrosage Intellegent</string>
    <string name="title_activity_statistic" translatable="false">StatisticActivity</string>
    <string name="navigation_drawer_open" translatable="false" >Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="dashboard">Dashboard</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="GreenSpaces">Green Spaces</string>
    <string name="Myprofil">My profil</string>
    <string name="logout">Logout</string>
    <string name="plantages">Plant</string>
    <string name="login">Log in</string>
    <string name="liste_of_plants">List of plants</string>
    <string name="type_of_plants">Type of plants</string>
    <string name="informations">My Informations :</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="nombre">Number :</string>
    <string name="plante">Plant :</string>
    <string name="libelle">Label :</string>
    <string name="name">Name:</string>
    <string name="temperature">Temperature:</string>
    <string name="luminosite">luminosity:</string>
</resources>