<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_stats"
            android:title="@string/dashboard" />

        <item
                android:id="@+id/nav_espacevert"
                android:icon="@drawable/ic_vert"
                android:title="@string/GreenSpaces" />

        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/ic_user"
            android:title="@string/Myprofil" />

        <item
            android:id="@+id/nav_plante"
            android:icon="@drawable/ic_vert"
            android:title="@string/plantages" />


        <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_power"
                android:title="@string/logout" />
    </group>
</menu>