<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_head"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="#F1DDBF">

        <RelativeLayout
            android:id="@+id/RL_imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="1600dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:elevation="5dp">

                <ImageView
                    android:id="@+id/profileP"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:background="@drawable/profile"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:id="@+id/progress_bar_profile_pic"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="110dp"
                android:elevation="10dp"
                android:visibility="gone" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView_show_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/RL_imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/informations"
            android:textAlignment="center"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="-50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/gradientbackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/RL_name">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:id="@+id/ic_profile"

                android:background="@drawable/ic_profile"/>

            <TextView
                android:id="@+id/usernameP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/ic_profile"
                android:layout_centerVertical="true"
                android:layout_marginStart="50dp"
                android:hint="@string/username" />
        </RelativeLayout>

        <View
            android:id="@+id/divider_name"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/RL_name"
            android:background="@android:color/darker_gray"/>

        <RelativeLayout
            android:id="@+id/RL_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider_name"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/ic_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_email" />

            <TextView
                android:id="@+id/emailP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/ic_email"
                android:layout_centerVertical="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:hint="Email" />
        </RelativeLayout>

        <View
            android:id="@+id/divider_email"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/RL_email"
            android:background="@android:color/darker_gray"/>

        <RelativeLayout
            android:id="@+id/RL_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider_email"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/ic_dob"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_birthday"
                />

            <TextView
                android:id="@+id/addressP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/ic_dob"
                android:layout_centerVertical="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:hint="@string/address" />
        </RelativeLayout>

        <View
            android:id="@+id/divider_dob"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/RL_dob"
            android:background="@android:color/darker_gray"/>

        <RelativeLayout
            android:id="@+id/RL_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider_dob"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/ic_gender"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_gender" />

            <TextView
                android:id="@+id/roleP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/ic_gender"
                android:layout_centerVertical="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:hint="@string/password" />
        </RelativeLayout>

        <View
            android:id="@+id/divider_gender"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/RL_gender"
            android:background="@android:color/darker_gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/RL_mobile"
            android:layout_marginTop="10dp"
            android:layout_below="@id/divider_gender">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:id="@+id/ic_mobile"
                android:background="@drawable/ic_mobile"/>

            <TextView
                android:id="@+id/numberP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignStart="@id/ic_mobile"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:hint="@string/phone_number" />
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:elevation="10dp"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>